@@ -1,2 +1,3 @@
 README
 THANKS
+NEWS
